// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Tabs stateful - absolute & bordered 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-d7g4da"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-1hf831j"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-18lpvrh"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - absolute 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-4e8exj"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-1hf831j"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-18lpvrh"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - bordered 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-8a9ncn"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-1hf831j"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - no initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-13o7eu2"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-1hf831j"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateful - with initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-13o7eu2"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-1hf831j"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:block"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - default 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-13o7eu2"
  >
    <div
      class="css-1whcqvw"
      role="tablist"
    >
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #1
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #2
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab with scroll
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #4
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #5
      </button>
      <button
        class="css-xcko46"
        role="tab"
        type="button"
      >
        Tab title #6
      </button>
    </div>
    <div
      class="css-1bx5ylf"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - empty 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <p
    class="css-hftiue"
  >
    no panels available
  </p>
</div>
`;
